ENG-2944 OnPrem Config wizard layout issues
Summary:
Description as in JIRA

Before
{F8597}

After
{F8596}

Test Plan:
 Go to OnPrem config wizard.
The Stepper should be in a single row and should not wrap around.

Reviewers: vit.pankin, bharat

Reviewed By: bharat

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D4313

--- a/managed/ui/src/components/config/OnPrem/wizard/OnPremConfigWizard.scss
+++ b/managed/ui/src/components/config/OnPrem/wizard/OnPremConfigWizard.scss
@@ -106,7 +106,6 @@ label textarea {
   font-size: 16px;
   line-height: 46px;
   padding-bottom: 3px;
-  margin-left: 25px;
   border-bottom: 1px solid $YB_GRAY;
   color: rgba(black, 0.35);
   white-space: nowrap;
